--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://NazeeraSheik.github.io/React-teamProject/",
+  "homepage":"https://NazeeraSheik.github.io/React_Website/",
   "name": "project",
   "version": "0.1.0",
   "private": true,
